--- a/index.html
+++ b/index.html
@@ -19,9 +19,22 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My First Website</title>
 </head>
 <body>
-    
+    <h1>Revathi's Portfolio</h1>
+    <h2>I am a WebDeveloper</h2>
+    <hr />
+    <h3><a href = "./public/movie-ranking.html">Movie Ranking Project</a></h3>
+    <img src = "./assets/images/movie-ranking.png" alt = "Movie Ranking" /> <br />
+
+    <h3><a href="./public/birthday-invite.html">Daughter's Birthday Invitation</a></h3>
+    <img src = "./assets/images/birthday-invite.png" alt = "Birthday Invitation" /><br />
+    <hr />
+
+    <a href = "./public/about.html">About me</a><br />
+    <a href = "./public/contact.html">Contact me</a>
+
+
 </body>
 </html>
